<resources>
    <string name="app_name">计算器</string>
    <string name="main_button1">开始记录</string>
    <string name="main_button2">详细记录</string>
    <string name="main_button3">编辑项目</string>
    <string name="mergedata">合并数据</string>
    <string name="appSetup">设置</string>
    <string name="main_button4">汇总数据</string>
    <string name="quit">退出</string>
    <string name="close">关闭</string>
    <string name="confirm">确认</string>
    <string name="newPWD">输入新密码：</string>
    <string name="confirmPWD">确认新密码：</string>
</resources>
